--- a/package.json
+++ b/package.json
@@ -9,20 +9,31 @@
   ],
   "scripts": {
     "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
+    "start": "cross-env NODE_OPTIONS=\"-r esm\" gatsby develop",
+    "build": "cross-env NODE_OPTIONS=\"-r esm\" gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^9.0.1",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-styled-components": "^4.4.0",
     "gatsby-source-sanity": "^7.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-portable-text": "^0.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "esm": "^3.2.25"
   }
 }
