--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^9.0.1",
     "gatsby": "^3.4.1",
