--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "noUnusedParameters": true,
     "removeComments": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "files": ["./src/@types/block-content-to-react.d.ts"]
 }
