--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^9.0.1",
-    "gatsby": "^3.4.1",
+    "gatsby": "^3.14.0",
     "gatsby-plugin-image": "^1.4.1",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-styled-components": "^4.4.0",
     "gatsby-source-sanity": "^7.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-portable-text": "^0.3.0",
@@ -36,6 +37,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.2",
     "cross-env": "^7.0.3",
     "esm": "^3.2.25"
   }
