--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^9.0.1",
@@ -32,6 +33,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-portable-text": "^0.3.0",
+    "react-syntax-highlighter": "^15.4.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0"
